[metadata]
name = dig_pw_patcher_proxy
version = 0.1.0
author = Gustavo de Oliveira Silva (DIG)
description = Download latest update and act as proxy to speedup patcher process
long_description = file:README.md
long_description_content_type = text/markdown
license = CC BY-ND 4.0
license_files = license.txt
url = https://github.com/DIG-/python-pw-patcher-proxy
project_urls =
    Bug Tracker = https://github.com/DIG-/python-pw-patcher-proxy/issues
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8

[options.packages.find]
where=src